# mynn

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
mynn/: __init__.py  activations.py  batch_norm.py  dropout.py  layers.py  losses.py  neural_network.py  optimisers.py  train_test_split.py
scripts/: nnfs_spiral_functional.py  nnfs_spiral_oop.py  xor_demo.py
tests/: test_layers.py  test_losses.py  test_neural_network.py  test_utils.py
