[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mynn"
version = "0.1.0"
description = "Modular neural-network components built on NumPy"
readme = "README.md"
authors = [{ name = "Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "black>=24.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mynn"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
